# copy-cat

./: README.md
App/: build.gradle.kts  settings.gradle.kts
App/copyCatAndroid/: build.gradle.kts
App/copyCatAndroid/src/main/: AndroidManifest.xml
App/copyCatAndroid/src/main/java/org/dedda/copycat/android/: AddServer.kt  EditServer.kt  Home.kt  IntentExtensions.kt  MainActivity.kt  ServerList.kt  Settings.kt  Theme.kt
App/copyCatAndroid/src/main/res/values/: strings.xml
App/copyCatiOS/: Podfile
App/copyCatiOS/copyCatiOS.xcodeproj/: project.pbxproj
App/copyCatiOS/copyCatiOS.xcworkspace/: contents.xcworkspacedata
App/gradle/wrapper/: gradle-wrapper.properties
App/shared/: build.gradle.kts
App/shared/src/androidMain/kotlin/org/dedda/copycat/: Platform.kt
App/shared/src/androidMain/kotlin/org/dedda/copycat/database/: DatabaseDriverFactory.kt
App/shared/src/commonMain/kotlin/org/dedda/copycat/: Greeting.kt  Platform.kt
App/shared/src/commonMain/kotlin/org/dedda/copycat/communication/: ClipboardApi.kt  ClipboardSink.kt  ClipboardSource.kt  HttpClipboardSink.kt  HttpClipboardSource.kt  Protocol.kt
App/shared/src/commonMain/kotlin/org/dedda/copycat/database/: DatabaseDriverFactory.kt  DatabaseRepository.kt  Repository.kt
App/shared/src/commonMain/sqldelight/org/dedda/copycat/database/: AppDatabase.sq
App/shared/src/iosMain/kotlin/org/dedda/copycat/: Platform.kt
App/shared/src/iosMain/kotlin/org/dedda/copycat/database/: DatabaseDriverFactory.kt
Server/: Cargo.toml  Rocket.toml
Server/src/: main.rs
(+8 files in other folders)
