[package]
name = "copycat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
clipboard = "0.5.0"
local-ip-address = "0.4.9"
qr2term = "0.3.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0"